<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="4"
            android:background="@color/colorGris">
            <EditText
                android:id="@+id/ETNumeros"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="70dp"
                android:textColor="@color/colorBlanco"
                android:hint="0"
                android:gravity="right"
                android:background="@null"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorGris"
            android:orientation="horizontal"
            android:weightSum="4">
            <TableLayout
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5"
                android:layout_weight="2">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="3">
                    <Button
                        style="@style/btnBotonNumerico"
                        android:text="@string/ac"/>
                    <Button
                        style="@style/btnBotonNumerico"
                        android:text="@string/masmenos"
                        />
                    <Button
                        style="@style/btnBotonNumerico"
                        android:text="@string/porcentaje"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="3">
                    <Button
                        android:id="@+id/siete"
                        style="@style/btnBotonNumerico"
                        android:text="@string/siete"/>
                    <Button
                        android:id="@+id/ocho"
                        style="@style/btnBotonNumerico"
                        android:text="@string/ocho"/>
                    <Button
                        android:id="@+id/nueve"
                        style="@style/btnBotonNumerico"
                        android:text="@string/nueve"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="3">
                    <Button
                        android:id="@+id/cuatro"
                        style="@style/btnBotonNumerico"
                        android:text="@string/cuatro"/>
                    <Button
                        android:id="@+id/cinco"
                        style="@style/btnBotonNumerico"
                        android:text="@string/cinco"/>
                    <Button
                        android:id="@+id/seis"
                        style="@style/btnBotonNumerico"
                        android:text="@string/seis"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="3">
                    <Button
                        android:id="@+id/uno"
                        style="@style/btnBotonNumerico"
                        android:text="@string/uno"/>
                    <Button
                        android:id="@+id/dos"
                        style="@style/btnBotonNumerico"
                        android:text="@string/dos"/>
                    <Button
                        android:id="@+id/tres"
                        style="@style/btnBotonNumerico"
                        android:text="@string/tres"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="3">
                    <Button
                        android:id="@+id/cero"
                        style="@style/btnBotonAbajo"
                        android:text="@string/cero"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/coma"
                        style="@style/btnBotonAbajo"
                        android:text="@string/coma"
                        android:layout_weight="2"/>
                </LinearLayout>
            </TableLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:orientation="vertical"
                android:weightSum="5"
                android:layout_weight="2">
                <Button
                    android:id="@+id/dividir"
                    style="@style/btnBotonOperacion"
                    android:text="÷" />
                <Button
                    android:id="@+id/multiplicar"
                    style="@style/btnBotonOperacion"
                    android:text="*" />
                <Button
                    android:id="@+id/restar"
                    style="@style/btnBotonOperacion"
                    android:text="-" />
                <Button
                    android:id="@+id/sumar"
                    style="@style/btnBotonOperacion"
                    android:text="+"/>
                <Button
                    android:id="@+id/igual"
                    style="@style/btnBotonOperacion"
                    android:text="=" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>